# anyPython

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  __init__.py  presentation.pptx  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-pipeline.yml  publish_node.yml  validate.yml
Examples/: set-image-as-wallaper.py  stipple-art-generator.py
nodes/: nodes.py
src/anypython/: nodes.py
tests/: __init__.py  conftest.py  pytest.ini  test_anypython.py
workflows/: anyPython-workflow-with-Ollama.json
